[gd_scene load_steps=2 format=3 uid="uid://c7f7prutn7ykk"]

[ext_resource type="Script" path="res://Game/UI_ingame/user_interface.gd" id="1_2xmxm"]

[node name="UserInterface" type="Camera2D"]
enabled = false
process_callback = 0
script = ExtResource("1_2xmxm")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ChangePhaseButton" type="Button" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 502.0
offset_top = 27.0
offset_right = 617.0
offset_bottom = -1072.0
grow_vertical = 2
text = "change phase"

[node name="Button" type="Button" parent="UI"]
visible = false
offset_left = 40.0
offset_top = 43.0
offset_right = 291.0
offset_bottom = 92.0
text = "AAAAAAAAAAAAA"

[node name="Button2" type="Button" parent="UI"]
visible = false
offset_left = 384.0
offset_top = 1071.0
offset_right = 635.0
offset_bottom = 1120.0
text = "AAAAAAAAAAAAA"

[node name="RestartButton" type="Button" parent="UI"]
offset_left = 51.0
offset_top = 29.0
offset_right = 164.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 30
text = "Restart"

[connection signal="pressed" from="UI/ChangePhaseButton" to="." method="_on_change_phase_button_pressed"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_restart_button_pressed"]
